--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li><a href="#">ABOUT</a></li>
         </ul>
         <div class="bars-logo-containar">
-          <img class="bars-logo" src="img/logo_full.svg" width="170px">
+          <img class="bars-logo" src="https://raw.githubusercontent.com/sota1231/mosha-1/21eaac4708bb9cb6be5fa11bb5947d87ec5f5421/logo_full.svg" width="170px">
         </div>
           <h2 class="center">PROJECT</h2>
         <div class="bars-right">
@@ -55,8 +55,8 @@
 
 <!---------------------------------------------bars-end-->
       <div class="header-wrraper">
-        <img class="header-img" src="img/top-image.png" width="100%">
-        <img class="header-logo" src="img/side-logo.svg" width="100%">
+        <img class="header-img" src="https://github.com/sota1231/mosha-1/blob/main/top-image.png?raw=true" width="100%">
+        <img class="header-logo" src="https://raw.githubusercontent.com/sota1231/mosha-1/21eaac4708bb9cb6be5fa11bb5947d87ec5f5421/side-logo.svg" width="100%">
         <a href="#" class="humbargar"><i class="fa-solid fa-bars fa-2x"></i></a>
       </div>
     </header>
@@ -66,7 +66,7 @@
 
       <div class="cachi">
         <div class="cachi-logo">
-          <img  src="img/main-1.svg" width="100%" >
+          <img  src="https://raw.githubusercontent.com/sota1231/mosha-1/21eaac4708bb9cb6be5fa11bb5947d87ec5f5421/main-1.svg" width="100%" >
         </div>
         <div class="text-container">
           <div class="main-1-ttl">
@@ -162,17 +162,17 @@
           <div class="info-boxs">
             
             <div class="info-box">
-              <img src="img/info_thumbnail_1.svg">
+              <img src="https://raw.githubusercontent.com/sota1231/mosha-1/21eaac4708bb9cb6be5fa11bb5947d87ec5f5421/info_thumbnail_1.svg">
               <p class="process-sub-text">１．都道府県別家庭ゴミの年間排出量</p>
             </div>
 
             <div class="info-box">
-              <img src="img/info_thumbnail_2.svg">
+              <img src="https://raw.githubusercontent.com/sota1231/mosha-1/21eaac4708bb9cb6be5fa11bb5947d87ec5f5421/info_thumbnail_2.svg">
               <p class="process-sub-text">２．家庭ゴミにおける容器包装の重さと容積の割合</p>
             </div>
 
             <div class="info-box">
-              <img src="img/info_thumbnail_3.svg">
+              <img src="https://raw.githubusercontent.com/sota1231/mosha-1/21eaac4708bb9cb6be5fa11bb5947d87ec5f5421/info_thumbnail_3.svg">
               <p class="process-sub-text">３．容器包装のリサイクル率の割合</p>
             </div>
           </div>
