--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
           </div>
           <div class="icon">
             <p>このページを共有する</p>
-            <img src="img/icon_twitter.svg">
-            <img src="img/icon_facebook.svg">
+            <img src="https://raw.githubusercontent.com/sota1231/mosha-1/45446aa10c1a3659a48c05e0115d45e85b25bc3d/icon_twitter.svg">
+            <img src="https://raw.githubusercontent.com/sota1231/mosha-1/45446aa10c1a3659a48c05e0115d45e85b25bc3d/icon_facebook.svg">
           </div>
         </div>
       </div>
