--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
             <p class="kokotiyoi-ttl">捨て心地のよい<br>お弁当容器</p>
             <p class="kokotiyoi-text">折り紙のように折りたたんでコンパクトに捨てられる、紙製の使い捨て弁当容器です。食事が終わったら箱をたたみ、ケースのようになっている蓋に収めることで、箸とともに小さくまとめて捨てることができます。</p>
             <div class="kokotiyoi-img">
-              <img src="img/img_project01_01.jpg">
-              <img src="img/img_project01_02.jpg">
+              <img src="https://github.com/sota1231/mosha-1/blob/main/img_project01_01.jpg?raw=true">
+              <img src="https://github.com/sota1231/mosha-1/blob/main/img_project01_02.jpg?raw=true">
             </div>
           </div>
           <div class="porojrct-process">
@@ -120,17 +120,17 @@
 
 
               <div class="process-box">
-                <img src="img/img_process01_03.jpg">
+                <img src="https://github.com/sota1231/mosha-1/blob/main/img_project01_03.jpg?raw=true">
                 <div class="text-layout">
                   <p class="numbur">０４</p>
                   <p class="pdca">設定</p>
                 </div>
-                <p class="process-sub-ttl">食品容器の<br>廃棄体験を設計する</p>
+                <p class="process-sub-ttl">食品容器の<br>廃棄体験https://github.com/sota1231/mosha-1/blob/main/img_project01_01.jpg?raw=trueを設計する</p>
                 <p class="process-sub-text">捨てる瞬間の心地よい体験にフォーカスをあて、検証を重ねた製作プロジェクトを振り返ります。</p>
               </div>
 
               <div class="process-box">
-                <img src="img/img_process01_02.jpg">
+                <img src="https://github.com/sota1231/mosha-1/blob/main/img_process01_02.jpg?raw=true">
                 <div class="text-layout">
                   <p class="numbur">０３</p>
                   <p class="pdca">検証</p>
@@ -141,7 +141,7 @@
               </div>
 
               <div class="process-box">
-                <img src="img/img_pj1_process02_01-1.jpg">
+                <img src="https://github.com/sota1231/mosha-1/blob/main/img_pj1_process02_01-1.jpg?raw=true">
                 <div class="text-layout">
                    <p class="numbur">０２</p>
                    <p class="pdca">リサーチ</p>
