--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
 
 
               <div class="process-box">
-                <img src="https://github.com/sota1231/mosha-1/blob/main/img_project01_03.jpg?raw=true">
+                <img src="https://github.com/sota1231/mosha-1/blob/main/img_process01_03.jpg?raw=true">
                 <div class="text-layout">
                   <p class="numbur">０４</p>
                   <p class="pdca">設定</p>
                 </div>
-                <p class="process-sub-ttl">食品容器の<br>廃棄体験https://github.com/sota1231/mosha-1/blob/main/img_project01_01.jpg?raw=trueを設計する</p>
+                <p class="process-sub-ttl">食品容器の<br>廃棄体験を設計する</p>
                 <p class="process-sub-text">捨てる瞬間の心地よい体験にフォーカスをあて、検証を重ねた製作プロジェクトを振り返ります。</p>
               </div>
 
