--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </div>
             </div>
             <div class="nav-photo">
-              <img src="img/img_project01_thumbnail-1536x768.jpg" width="250px" height="150px">
+              <img src="https://github.com/sota1231/mosha-1/blob/main/img_project01_thumbnail-1536x768.jpg?raw=true" width="250px" height="150px">
             </div> 
           </div>
         </div>
